# memlong

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-TW.md  analysis.md  final.md  install.ps1  install.sh  opencode-memory-system.md  plan.md  spec.md  task.md  test.md  todos.md
.github/workflows/: release.yml
configs/opencode/: opencode.memlong.jsonc
crates/agents-memory-cli/: Cargo.toml
crates/agents-memory-cli/src/: main.rs
crates/agents-memory-core/: Cargo.toml
crates/agents-memory-core/src/: config.rs  service.rs
crates/agents-memory-core/src/extraction/: engine.rs  llm_client.rs
crates/agents-memory-core/src/models/: memory.rs  query.rs
crates/agents-memory-core/src/retrieval/: engine.rs  mod.rs
crates/agents-memory-core/src/storage/: sqlite.rs
crates/agents-memory-core/tests/: consolidation_test.rs  dedup_test.rs  lifecycle_test.rs  query_validation_test.rs  vector_store_test.rs
crates/agents-memory-servics/: Cargo.toml
crates/agents-memory-servics/src/: commands.rs  main.rs  server.rs
crates/memory-cli/src/: main.rs
crates/memory-core/: Cargo.toml
crates/memory-core/benches/: memory_bench.rs
crates/memory-core/src/: config.rs  service.rs
crates/memory-core/tests/: consolidation_test.rs  lifecycle_test.rs  vector_store_test.rs
crates/memory-mcp-server/: Cargo.toml
crates/memory-mcp-server/src/: commands.rs  main.rs  server.rs
crates/memory-mcp-server/tests/: protocol_test.rs
docs/: baseline.md  claude-code.md  client-compatibility.md  codex.md  config-reference.md  opencode.md  source-notes.md  spec-gap-todo.md
docs/superpowers/plans/: 2026-06-13-spec-alignment.md  2026-06-13-spec-gap-closure.md
examples/claude/: .mcp.json
examples/codex/: config.toml
examples/env/: local-llm.env.example  openai-compatible.env.example
examples/opencode/: opencode.jsonc
memlong_opencode_codex_claude_pack/: AGENTS.md  CLAUDE.md  README.md  spec.md  todos.md
memlong_opencode_codex_claude_pack/configs/codex/: config.memlong.toml
memlong_opencode_codex_claude_pack/docs/: client-compatibility.md
memlong_opencode_codex_claude_pack/scripts/: verify.ps1
plugin/: package.json
plugin/src/: index.ts  response.ts
plugin/test/: index.test.cjs
scripts/: coverage.ps1  package-release.ps1  verify.sh
skills/rust-rmcp-mcp-server/: SKILL.md
skills/rust-rmcp-mcp-server/agents/: openai.yaml
skills/rust-rmcp-mcp-server/references/: opencode-codex.md  release-install.md  rmcp-server.md
skills/rust-rmcp-mcp-server/scripts/: opencode_tools_list_smoke.ps1
(+13 files in other folders)
