[workspace]
resolver = "2"
members = [
    "crates/memory-core",
    "crates/memory-mcp-server",
    "crates/memory-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenCode Memory System"]
license = "MIT"

[workspace.dependencies]
# Async Runtime
tokio            = { version = "1", features = ["full"] }

# Serialization
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# Database
sqlx             = { version = "0.8", features = [
                     "sqlite", "runtime-tokio", "macros", "migrate"
                   ] }

# Full-Text Search (BM25)
tantivy          = { version = "0.22", default-features = true }



# MCP Protocol
rmcp             = { version = "0.1", features = ["server", "transport-io", "macros"] }
schemars         = "0.8"

# HTTP Client (LLM API)
reqwest          = { version = "0.12", features = ["json"] }

# Error Handling
anyhow           = "1"
thiserror        = "1"

# Logging / Tracing
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid             = { version = "1", features = ["v4"] }
chrono           = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
