[package]
name = "agents-memory-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agents-memory-cli"
path = "src/main.rs"

[dependencies]
agents-memory-core  = { path = "../agents-memory-core" }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
clap                = { version = "4", features = ["derive"] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
