[package]
name = "agents-memory-servics"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ams"
path = "src/main.rs"

[dependencies]
agents-memory-core  = { path = "../agents-memory-core" }
rmcp                = { workspace = true }
schemars            = { workspace = true }
tokio               = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
anyhow              = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
